[tool.poetry]
name = "django-warrant"
version = "0.2.1"
description = ""
authors = ["Collin Caram <collin@nubrakes.com>"]
readme = "README.md"
packages = [{include = "django_warrant"}]

[tool.poetry.dependencies]
python = ">=3.7,<4"
boto3 = ">=1.28.0"
Django = ">=3.2,<4"
django-braces = ">=1.11.0"
django-crispy-forms = ">=1.14"
django-extensions = ">=1.7.7"
django-utils-six = ">=2.0"
pycognito = ">=2023.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
